--- a/src/Pantallas/TablaPuntuacion.css
+++ b/src/Pantallas/TablaPuntuacion.css
@@ -8,6 +8,16 @@
   table {
     border-collapse: collapse;
     width: 100%;
+    animation: fadeIn 1s forwards;
+  }
+
+  @keyframes fadeIn {
+    0%{
+      opacity: 0;
+    }
+    100%{
+      opacity: 1;
+    }
   }
   
   .backgroundImage{
