--- a/src/Pantallas/Temas.css
+++ b/src/Pantallas/Temas.css
@@ -3,6 +3,16 @@
     align-items: center;
     justify-content: space-around;
     height: 100vh;
+    animation: fadeIn 1s forwards;
+}
+
+@keyframes fadeIn {
+    0%{
+        opacity: 0%;
+    }
+    100%{
+        opacity: 100%;
+    }
 }
 
 .cuerpoTemas{
@@ -65,10 +75,11 @@
     top: 25px;
     margin: 0;
     border-width: 3px;
-    padding: 5px;
+    padding: 7px;
     right: 30px;
-    border-radius: 4px;
-    background-color: greenyellow;
+    border-radius: 10px;
+    border-style: solid;
+    background-color: white;
 }
 
 .backgroundImage{
@@ -78,5 +89,5 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    filter: blur(4px);
+    background-color: whitesmoke;
   }
