--- a/src/Pantallas/Juego.css
+++ b/src/Pantallas/Juego.css
@@ -154,48 +154,64 @@
 
 .piramide {
   display: flex;
-  flex-direction: column-reverse;
-  width: 90vw;
-  height: 100vh;
-  overflow-y: auto;
+  height: 100vh !important;
+  width: 100vw;
+  position: fixed;
+  top: 0px;
+  left: 0;
+  overflow: hidden;
+  overflow-y: auto ;
+  flex-direction: column;
   align-items: center;
-  padding-bottom: 10px;
+}
+
+.piramide img{
+  display: flex;
+  width: 70vw;
+  height: auto !important;
+  object-fit: cover;
+  z-index: 3;
+  margin: 20px;
+  margin-top: 40px;
+}
+
+.escalones{
+  width: 100vw;
+  height: auto !important;
+  position: relative;
+  margin-top: calc(-98vw );
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
 }
 
 .escalon {
-  border-radius: 20px;
-  width: calc(60vw - 3.2vw*var(--index));
-  display: flex;
-  border-style: solid;
-  min-height: 40px;
-  text-align: center;
-  align-items: center;
-  justify-content: space-around;
-  margin: 4px;
-  background-color: white;
-  font-weight: bolder;
-  box-shadow: 5px 5px 7px -5px black;
+  width: 62vw;
+  z-index: 10;
+  text-align: right;
+  height: 4.5vw !important;
+  background-color: transparent;
+  position: relative;
+  margin-top: 1.87vw;
 }
 
 
 .escalonDone {
-  background-color: rgb(245, 137, 5);
-  color: white;
-  border-color: white;
-  transform: scale(1.05);
+  color: orange;
 }
 
 .btnSig {
+  z-index: 12;
   padding: 4px;
-  width: 120px;
+  width: 100px;
   min-height: 40px;
   position: fixed;
-  top: 10px;
-  right: 10px;
+  top: 15px;
+  right: 15px;
   border-style: solid;
   border-width: 3px;
   border-color: black;
-  border-radius: 10px;
+  border-radius: 15px;
   background-color: white;
   font-size: 16px;
   font-weight: bold;
