--- a/src/Pantallas/Juego.css
+++ b/src/Pantallas/Juego.css
@@ -87,6 +87,14 @@
   z-index: 1;
 }
 
+.puntaje{
+  position: absolute;
+  top: 0px;
+  left: 10px;
+  font-weight: 900;
+  color: orange;
+}
+
 .video {
   width: 100vw;
   height: 100vh;
@@ -115,6 +123,13 @@
   flex-direction: column;
   align-items: center;
   font-size: medium;
+}
+
+.power{
+  position: absolute;
+  z-index: 5;
+top: 10px;
+right: 10px;
 }
 
 .gameEndContainer h1 {
@@ -165,39 +180,41 @@
   align-items: center;
 }
 
-.piramide img{
-  display: flex;
-  width: 70vw;
-  height: auto !important;
-  object-fit: cover;
-  z-index: 3;
-  margin: 20px;
-  margin-top: 40px;
-}
 
 .escalones{
   width: 100vw;
   height: auto !important;
   position: relative;
-  margin-top: calc(-98vw );
   display: flex;
   flex-direction: column-reverse;
   align-items: center;
+  margin-bottom: 20px;
 }
 
 .escalon {
-  width: 62vw;
+  width: 51vw;
   z-index: 10;
   text-align: right;
-  height: 4.5vw !important;
-  background-color: transparent;
+  height: 3.1vw !important;
   position: relative;
-  margin-top: 1.87vw;
+  margin-top: 1.5vw;
 }
 
+.escalon img{
+  width: 51vw;
+}
+.escalon p{
+  position: absolute;
+  z-index: 10;
+  margin: 0;
+  top: 5px !important;
+  right: 10px;
+}
 
 .escalonDone {
+  animation: zoomLoop2 2s infinite ease-in-out;
   color: orange;
+  font-weight: bold;
 }
 
 .btnSig {
@@ -216,6 +233,48 @@
   font-size: 16px;
   font-weight: bold;
   background-color: greenyellow;
+}
+
+.correct{
+ animation: blink 0.2s infinite ease-in;
+}
+
+@keyframes blink {
+  from{
+    background-color: white;
+  }
+  to{
+
+    background-color: greenyellow;
+  }
+}
+
+.anounce{
+  position: fixed;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw !important;
+  height: 100vh !important;
+  top: 0;
+  left: 0;
+  flex-direction: column;
+  z-index: 5;
+
+}
+
+.anounce div{
+  width: 40vw;
+  height: auto !important;
+  padding-left: 10px;
+  padding-right: 10px ;
+  border-radius: 20px;
+  background-color: white;
+  animation: zoomIn 1s forwards ease-in, zoomLoop 2s infinite ease-in;
+  box-shadow: 2px 2px 8px -1px black;
+  text-align: center;
+  font-weight: 700;
 }
 
 .escalon:nth-child(2) {
@@ -276,4 +335,38 @@
 
 .escalon:nth-child(16) {
   --index: 15;
+}
+
+@keyframes zoomIn{
+  from{
+    height: 0;
+  }
+  to{
+
+    height: 90vh;
+  }
+}
+
+@keyframes zoomLoop {
+  0%{
+    transform: scale(0.99);
+  }
+  50%{
+    transform: scale(1.01);
+  }
+  100%{
+    transform: scale(0.99);
+  }
+}
+
+@keyframes zoomLoop2 {
+  0%{
+    transform: scale(1.04);
+  }
+  50%{
+    transform: scale(1.08);
+  }
+  100%{
+    transform: scale(1.04);
+  }
 }
